[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
chrono = "0.4.23"
dotenv = "0.15.0"
serde = "1.0.152"
sqlx = { version = "0.6", features = [
  "chrono",
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
tokio = { version = "1.24.2", features = ["full"] }
